
    Add rate limiting of login attempts in WebLogin.  If enabled, after a
    configured number of failed login attempts, all password
    authentications for a given username will be rejected (valid or not)
    until a configurable interval of time has passed.  This support also
    requires a memcached server for data storage and the Perl module
    Cache::Memcached.

    In WebLogin, set single sign-on cookies if present even when
    displaying an error.  This establishes single sign-on when errors are
    returned after authentication, such as authentication rejected errors
    from the user information service.  Without this behavior, if the
    custom error sent the user to another page that also required
    authentication, the user would have to log in again and may given up,
    thinking that authentication was looping.

    Support two additional WebLogin configuration settings:
    @REMUSER_LOCAL_REALMS and @REMUSER_PERMITTED_REALMS.  These provide
    the equivalent of WebKdcLocalRealms and WebKdcPermittedRealms for
    Apache REMOTE_USER authentication handled by the WebLogin front-end
    (such as when using Negotiate-Auth with mod_auth_kerb).  Previously,
    there was only a @REMUSER_REALMS setting, which combined both
    meanings.  @REMUSER_REALMS continues to be supported for backward
    compatibility, but will only be used if the more-specific variable is
    not set.  Patch from Tom Jones.

    Fix mapping of WebKDC error codes to names when reporting errors in
    WebLogin, fixing mostly cosmetic Perl warnings in the WebLogin server
    logs.

    Document the WebAuthRequireSSL configuration directive.  Under normal
    circumstances, this directive should always be left on (the default)
    to avoid serious security vulnerabilities, but there are some specific
    situations where it may be necessary to turn it off.

    Add webauth_token_encrypt and webauth_token_decrypt to the public API,